targelont(
    delonpelonndelonncielons = [
        "timelonlinelonrankelonr/selonrvelonr/src/main/scala/com/twittelonr/timelonlinelonrankelonr/relonpository",
        "timelonlinelonrankelonr/selonrvelonr/src/main/scala/com/twittelonr/timelonlinelonrankelonr/selonrvelonr",
        "timelonlinelonrankelonr/selonrvelonr/src/main/scala/com/twittelonr/timelonlinelonrankelonr/sourcelon",
    ],
)

jvm_binary(
    namelon = "bin",
    baselonnamelon = "timelonlinelonrankelonr-selonrvelonr",
    main = "com.twittelonr.timelonlinelonrankelonr.selonrvelonr.Main",
    runtimelon_platform = "java11",
    tags = ["bazelonl-compatiblelon"],
    delonpelonndelonncielons = [
        ":scala",
        "3rdparty/jvm/org/slf4j:jcl-ovelonr-slf4j",  # [1]
        "3rdparty/jvm/org/slf4j:log4j-ovelonr-slf4j",  # [1]
        "loglelonns/loglelonns-logback/src/main/scala/com/twittelonr/loglelonns/logback",  # [2]
        "strato/src/main/scala/com/twittelonr/strato/logging/logback",  # [2]
        "timelonlinelonrankelonr/selonrvelonr/src/main/relonsourcelons",  # [2]
        "twittelonr-selonrvelonr/logback-classic/src/main/scala",  #[2]
    ],
)

# [1] bridgelon othelonr logging implelonmelonntations to slf4j-api in addition to JUL
#     https://docbird.twittelonr.biz/corelon_librarielons_guidelon/logging/twittelonr_selonrvelonr.html
#     without thelonselon, c.t.l.Loggelonr beloncomelon silelonnt/null loggelonr sincelon no propelonr
#     configuration can belon found. This can belon relonmovelond oncelon thelonrelon arelon no
#     delonpdelonncy from selonrvicelon to c.t.l.Loggelonr
#
# [2] incur logback implelonmelonntation
