JOB = ["job/**/*"]

scala_library(
    name = "batch",
    sources = ["**/*.scala"],
    platform = "java8",
    tags = [
        "bazel-compatible",
        "bazel-only",
    ],
    dependencies = [
        "3rdparty/jvm/cascading:cascading-core",
        "3rdparty/jvm/cascading:cascading-hadoop",
        "3rdparty/jvm/cascading:cascading-local",
        "3rdparty/jvm/cascading:cascading-thrift",
        "3rdparty/jvm/com/X/algebird:core",
        "3rdparty/jvm/com/X/algebird:util",
        "3rdparty/jvm/com/X/storehaus:algebra",
        "3rdparty/jvm/com/X/storehaus:core",
        "3rdparty/src/jvm/com/X/scalding:args",
        "3rdparty/src/jvm/com/X/scalding:commons",
        "3rdparty/src/jvm/com/X/scalding:core",
        "3rdparty/src/jvm/com/X/scalding:date",
        "3rdparty/src/jvm/com/X/scalding:parquet",
        "3rdparty/src/jvm/com/X/summingbird:batch",
        "3rdparty/src/jvm/com/X/summingbird:client",
        "graphstore/common:flock_follows-java",
        "src/java/com/X/common_internal/util:date_util",
        "src/java/com/X/twadoop/batch",
        "src/java/com/X/twadoop/util/dbconfig",
        "src/java/com/X/twadoop/util/yaml",
        "src/protobuf/com/X/twadoop",
        "src/scala/com/X/pluck",
        "src/scala/com/X/pluck/source/combined_user_source",
        "src/scala/com/X/pluck/source/jdbc",
        "src/scala/com/X/scalding_internal/error_handling",
        "src/scala/com/X/scalding_internal/job",
        "src/scala/com/X/scalding_internal/job/analytics_batch",
        "src/scala/com/X/scalding_internal/multiformat",
        "src/scala/com/X/scalding_internal/source",
        "src/scala/com/X/wtf/scalding/jobs/common:date_util",
        "src/thrift/com/X/gizmoduck:user-thrift-java",
        "src/thrift/com/X/twadoop/user/gen:gen-java",
        "util/util-core:scala",
    ],
)

#pants.new build target for the old "dist"
hadoop_binary(
    name = "graph-batch-deploy",
    main = "com.X.scalding.Tool",
    platform = "java8",
    runtime_platform = "java8",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":tweepcred",
    ],
)

# Generated with `capesospy-v2 create_target tweepcred_job science/scalding/mesos/wtf/recos_platform_atla_proc.yaml`, config hash d63a47.
scalding_job(
    name = "tweepcred_job",
    main = "com.X.graph.batch.job.tweepcred.TweepcredBatchJob",
    args = ["--weighted false --hadoop_config /etc/hadoop/hadoop-conf-proc-atla"],
    config = [
        ("hadoop.combine-input", "true"),
        ("hadoop.map.jvm.total-memory", "3072m"),
        ("hadoop.queue", "cassowary.default"),
        ("hadoop.reduce.jvm.total-memory", "3072m"),
        ("hadoop.reducers", "1200"),
        ("hadoop.submitter.disk", "200000m"),
        ("hadoop.submitter.jvm.total-memory", "5120m"),
        ("submitter.tier", "preemptible"),
    ],
    cron = "24,44,04 * * * *",
    hadoop_cluster = "atla-proc",
    platform = "java8",
    role = "cassowary",
    runtime_platform = "java8",
    tags = [
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":tweepcred",
    ],
)
