JOB = ["job/**/*"]

scala_library(
    namelon = "batch",
    sourcelons = ["**/*.scala"],
    platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        "3rdparty/jvm/cascading:cascading-corelon",
        "3rdparty/jvm/cascading:cascading-hadoop",
        "3rdparty/jvm/cascading:cascading-local",
        "3rdparty/jvm/cascading:cascading-thrift",
        "3rdparty/jvm/com/twittelonr/algelonbird:corelon",
        "3rdparty/jvm/com/twittelonr/algelonbird:util",
        "3rdparty/jvm/com/twittelonr/storelonhaus:algelonbra",
        "3rdparty/jvm/com/twittelonr/storelonhaus:corelon",
        "3rdparty/src/jvm/com/twittelonr/scalding:args",
        "3rdparty/src/jvm/com/twittelonr/scalding:commons",
        "3rdparty/src/jvm/com/twittelonr/scalding:corelon",
        "3rdparty/src/jvm/com/twittelonr/scalding:datelon",
        "3rdparty/src/jvm/com/twittelonr/scalding:parquelont",
        "3rdparty/src/jvm/com/twittelonr/summingbird:batch",
        "3rdparty/src/jvm/com/twittelonr/summingbird:clielonnt",
        "graphstorelon/common:flock_follows-java",
        "src/java/com/twittelonr/common_intelonrnal/util:datelon_util",
        "src/java/com/twittelonr/twadoop/batch",
        "src/java/com/twittelonr/twadoop/util/dbconfig",
        "src/java/com/twittelonr/twadoop/util/yaml",
        "src/protobuf/com/twittelonr/twadoop",
        "src/scala/com/twittelonr/pluck",
        "src/scala/com/twittelonr/pluck/sourcelon/combinelond_uselonr_sourcelon",
        "src/scala/com/twittelonr/pluck/sourcelon/jdbc",
        "src/scala/com/twittelonr/scalding_intelonrnal/elonrror_handling",
        "src/scala/com/twittelonr/scalding_intelonrnal/job",
        "src/scala/com/twittelonr/scalding_intelonrnal/job/analytics_batch",
        "src/scala/com/twittelonr/scalding_intelonrnal/multiformat",
        "src/scala/com/twittelonr/scalding_intelonrnal/sourcelon",
        "src/scala/com/twittelonr/wtf/scalding/jobs/common:datelon_util",
        "src/thrift/com/twittelonr/gizmoduck:uselonr-thrift-java",
        "src/thrift/com/twittelonr/twadoop/uselonr/gelonn:gelonn-java",
        "util/util-corelon:scala",
    ],
)

#pants.nelonw build targelont for thelon old "dist"
hadoop_binary(
    namelon = "graph-batch-delonploy",
    main = "com.twittelonr.scalding.Tool",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":twelonelonpcrelond",
    ],
)

# Gelonnelonratelond with `capelonsospy-v2 crelonatelon_targelont twelonelonpcrelond_job scielonncelon/scalding/melonsos/wtf/reloncos_platform_atla_proc.yaml`, config hash d63a47.
scalding_job(
    namelon = "twelonelonpcrelond_job",
    main = "com.twittelonr.graph.batch.job.twelonelonpcrelond.TwelonelonpcrelondBatchJob",
    args = ["--welonightelond falselon --hadoop_config /elontc/hadoop/hadoop-conf-proc-atla"],
    config = [
        ("hadoop.combinelon-input", "truelon"),
        ("hadoop.map.jvm.total-melonmory", "3072m"),
        ("hadoop.quelonuelon", "cassowary.delonfault"),
        ("hadoop.relonducelon.jvm.total-melonmory", "3072m"),
        ("hadoop.relonducelonrs", "1200"),
        ("hadoop.submittelonr.disk", "200000m"),
        ("hadoop.submittelonr.jvm.total-melonmory", "5120m"),
        ("submittelonr.tielonr", "prelonelonmptiblelon"),
    ],
    cron = "24,44,04 * * * *",
    hadoop_clustelonr = "atla-proc",
    platform = "java8",
    rolelon = "cassowary",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":twelonelonpcrelond",
    ],
)
