scala_library(
    sources = ["*.scala"],
    platform = "java8",
    tags = [
        "bazel-compatible",
        "bazel-only",
    ],
    dependencies = [
        "src/scala/com/X/onboarding/relevance/source:utt_account_recommendations-scala",
        "src/scala/com/X/scalding_internal/dalv2",
        "src/scala/com/X/simclusters_v2/scalding",
        "src/scala/com/X/wtf/entity_real_graph/common",
    ],
)

hadoop_binary(
    name = "inferred_entities_from_known_for-adhoc",
    main = "com.X.simclusters_v2.scalding.inferred_entities.InferredKnownForSemanticCoreEntitiesAdhocApp",
    platform = "java8",
    runtime_platform = "java8",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":inferred_entities",
    ],
)

hadoop_binary(
    name = "inferred_entities_from_known_for",
    main = "com.X.simclusters_v2.scalding.inferred_entities.InferredKnownForSemanticCoreEntitiesBatchApp",
    platform = "java8",
    runtime_platform = "java8",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":inferred_entities",
    ],
)

hadoop_binary(
    name = "inferred_entities_from_interested_in-adhoc",
    main = "com.X.simclusters_v2.scalding.inferred_entities.InferredInterestedInSemanticCoreEntitiesAdhocApp",
    platform = "java8",
    runtime_platform = "java8",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":inferred_entities",
    ],
)

hadoop_binary(
    name = "inferred_entities_from_interested_in",
    main = "com.X.simclusters_v2.scalding.inferred_entities.InferredInterestedInSemanticCoreEntitiesBatchApp",
    platform = "java8",
    runtime_platform = "java8",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":inferred_entities",
    ],
)
