scala_library(
    sources = [
        "*.scala",
    ],
    platform = "java8",
    tags = [
        "bazel-compatible",
        "bazel-only",
    ],
    dependencies = [
        "src/java/com/X/sbf/core",
        "src/java/com/X/sbf/graph",
        "src/scala/com/X/simclusters_v2/hdfs_sources",
        "src/scala/com/X/simclusters_v2/hdfs_sources:simclusters_v2_embeddings_lite-scala",
        "src/scala/com/X/simclusters_v2/hdfs_sources/presto_hdfs_sources",
        "src/scala/com/X/simclusters_v2/scalding",
        "src/scala/com/X/simclusters_v2/scalding/common",
        "src/scala/com/X/simclusters_v2/scalding/common/matrix",
        "src/scala/com/X/wtf/entity_real_graph/common",
        "src/scala/com/X/wtf/entity_real_graph/scalding/common",
        "src/scala/com/X/wtf/scalding/jobs/common:execution_app",
        "src/scala/com/X/wtf/scalding/jobs/common:sources",
        "src/scala/com/X/wtf/scalding/jobs/common:stats_util",
        "src/thrift/com/X/recos/entities:entities-thrift-scala",
        "src/thrift/com/X/wtf/entity_real_graph:entity_real_graph-thrift-scala",
        "usersource/snapshot/src/main/scala/com/X/usersource/snapshot/flat:usersource_flat-scala",
        "usersource/snapshot/src/main/thrift/com/X/usersource/snapshot/flat:flat-scala",
    ],
)

hadoop_binary(
    name = "update_known_for_20m_145k_2020-adhoc",
    main = "com.X.simclusters_v2.scalding.update_known_for.UpdateKnownFor20M145K2020Adhoc",
    platform = "java8",
    runtime_platform = "java8",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":update_known_for",
    ],
)

hadoop_binary(
    name = "update_known_for_20m_145k_2020",
    main = "com.X.simclusters_v2.scalding.update_known_for.UpdateKnownFor20M145K2020",
    platform = "java8",
    runtime_platform = "java8",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":update_known_for",
    ],
)
