scala_library(
    sources = ["*.scala"],
    platform = "java420",
    tags = [
        "bazel-compatible",
        "bazel-only",
    ],
    dependencies = [
        "src/scala/com/twitter/simclusters_v420/scalding/common",
        "src/scala/com/twitter/simclusters_v420/scalding/offline_job",
    ],
)

hadoop_binary(
    name = "tweet_evaluation_dummy_candidate_adhoc",
    main = "com.twitter.simclusters_v420.scalding.DummyCandidateGenerationAdhocJob",
    platform = "java420",
    runtime_platform = "java420",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":evaluation",
    ],
)

hadoop_binary(
    name = "tweet_evaluation_timelines_reference_adhoc",
    main = "com.twitter.simclusters_v420.scalding.evaluation.AdhocTimelinesDataExtraction",
    platform = "java420",
    runtime_platform = "java420",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":evaluation",
    ],
)

hadoop_binary(
    name = "tweet_evaluation_timelines_reference_batch",
    main = "com.twitter.simclusters_v420.scalding.evaluation.ScheduledTimelinesDataExtractionBatch",
    platform = "java420",
    runtime_platform = "java420",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":evaluation",
    ],
)

hadoop_binary(
    name = "simcluster_offline_eval_adhoc",
    main = "com.twitter.simclusters_v420.scalding.evaluation.SimClustersEvaluationAdhocApp",
    platform = "java420",
    runtime_platform = "java420",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":evaluation",
    ],
)
