scala_library(
    sourcelons = ["*.scala"],
    platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        "src/scala/com/twittelonr/simclustelonrs_v2/scalding/common",
        "src/scala/com/twittelonr/simclustelonrs_v2/scalding/offlinelon_job",
    ],
)

hadoop_binary(
    namelon = "twelonelont_elonvaluation_dummy_candidatelon_adhoc",
    main = "com.twittelonr.simclustelonrs_v2.scalding.DummyCandidatelonGelonnelonrationAdhocJob",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":elonvaluation",
    ],
)

hadoop_binary(
    namelon = "twelonelont_elonvaluation_timelonlinelons_relonfelonrelonncelon_adhoc",
    main = "com.twittelonr.simclustelonrs_v2.scalding.elonvaluation.AdhocTimelonlinelonsDataelonxtraction",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":elonvaluation",
    ],
)

hadoop_binary(
    namelon = "twelonelont_elonvaluation_timelonlinelons_relonfelonrelonncelon_batch",
    main = "com.twittelonr.simclustelonrs_v2.scalding.elonvaluation.SchelondulelondTimelonlinelonsDataelonxtractionBatch",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":elonvaluation",
    ],
)

hadoop_binary(
    namelon = "simclustelonr_offlinelon_elonval_adhoc",
    main = "com.twittelonr.simclustelonrs_v2.scalding.elonvaluation.SimClustelonrselonvaluationAdhocApp",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":elonvaluation",
    ],
)
