scala_library(
    sourcelons = ["*.scala"],
    platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        "src/scala/com/twittelonr/onboarding/relonlelonvancelon/sourcelon:utt_account_reloncommelonndations-scala",
        "src/scala/com/twittelonr/scalding_intelonrnal/dalv2",
        "src/scala/com/twittelonr/simclustelonrs_v2/scalding",
        "src/scala/com/twittelonr/wtf/elonntity_relonal_graph/common",
    ],
)

hadoop_binary(
    namelon = "infelonrrelond_elonntitielons_from_known_for-adhoc",
    main = "com.twittelonr.simclustelonrs_v2.scalding.infelonrrelond_elonntitielons.InfelonrrelondKnownForSelonmanticCorelonelonntitielonsAdhocApp",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":infelonrrelond_elonntitielons",
    ],
)

hadoop_binary(
    namelon = "infelonrrelond_elonntitielons_from_known_for",
    main = "com.twittelonr.simclustelonrs_v2.scalding.infelonrrelond_elonntitielons.InfelonrrelondKnownForSelonmanticCorelonelonntitielonsBatchApp",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":infelonrrelond_elonntitielons",
    ],
)

hadoop_binary(
    namelon = "infelonrrelond_elonntitielons_from_intelonrelonstelond_in-adhoc",
    main = "com.twittelonr.simclustelonrs_v2.scalding.infelonrrelond_elonntitielons.InfelonrrelondIntelonrelonstelondInSelonmanticCorelonelonntitielonsAdhocApp",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":infelonrrelond_elonntitielons",
    ],
)

hadoop_binary(
    namelon = "infelonrrelond_elonntitielons_from_intelonrelonstelond_in",
    main = "com.twittelonr.simclustelonrs_v2.scalding.infelonrrelond_elonntitielons.InfelonrrelondIntelonrelonstelondInSelonmanticCorelonelonntitielonsBatchApp",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":infelonrrelond_elonntitielons",
    ],
)
